; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_demux.c_error_on_backward_demuxing.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_demux.c_error_on_backward_demuxing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demux_internal = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"Disabling backward demuxing.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.demux_internal*)* @error_on_backward_demuxing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @error_on_backward_demuxing(%struct.demux_internal* %0) #0 {
  %2 = alloca %struct.demux_internal*, align 8
  store %struct.demux_internal* %0, %struct.demux_internal** %2, align 8
  %3 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %4 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %15

8:                                                ; preds = %1
  %9 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %10 = call i32 @MP_ERR(%struct.demux_internal* %9, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %11 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %12 = getelementptr inbounds %struct.demux_internal, %struct.demux_internal* %11, i32 0, i32 0
  store i32 0, i32* %12, align 4
  %13 = load %struct.demux_internal*, %struct.demux_internal** %2, align 8
  %14 = call i32 @clear_reader_state(%struct.demux_internal* %13, i32 1)
  br label %15

15:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @MP_ERR(%struct.demux_internal*, i8*) #1

declare dso_local i32 @clear_reader_state(%struct.demux_internal*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
